# INF568-shake128

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
tests/: cli.rs
tests/samples/: chi_expected_7  iota_expected_7  keccakf_expected  keccakf_input  pi_expected_7  rho_expected_7  theta_expected_7  theta_input_7
